src/parser/snapshots/almond__parser__regex__tests__regex_lit-2.snap
---
source: src/parser/regex.rs
expression: "parse_literal(r#\"/abc\\\\/g\"#.into()).unwrap().1"
---
{
  "type": "Literal",
  "value": "/abc\\\\/g",
  "start": 0,
  "end": 8
}
