src/parser/snapshots/almond__parser__regex__tests__regex_lit-3.snap
---
source: src/parser/regex.rs
expression: "parse_literal(r#\"/\\\\\\//g\"#.into()).unwrap().1"
---
{
  "type": "Literal",
  "value": "/\\\\\\//g",
  "start": 0,
  "end": 7
}
