src/parser/snapshots/almond__parser__regex__tests__regex_lit-4.snap
---
source: src/parser/regex.rs
expression: "parse_literal(r#\"/[^/]*$/\"#.into()).unwrap().1"
---
{
  "type": "Literal",
  "value": "/[^/]*$/",
  "start": 0,
  "end": 8
}
