src/parser/snapshots/almond__parser__regex__tests__regex_lit.snap
---
source: src/parser/regex.rs
expression: "parse_literal(\"/abc/g\".into()).unwrap().1"
---
{
  "type": "Literal",
  "value": "/abc/g",
  "start": 0,
  "end": 6
}
